# python-app-template

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  TEMPLATE.md  action_config.toml  pyproject.toml  requirements.txt  semantic-release.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: auto_pull_request_merge.yaml  auto_pull_request_review.yaml  auto_push_generate_pre_release.yaml  auto_tag_push.yaml  check_request.yaml  generate_release_auto.yaml  make_test_image.yaml  manual_dispatch_new_release.yaml  manual_dispatch_pre_release.yaml  pylint.yaml  tool-pr-linter.yaml
conda/: recipe.yaml
src/: common.py  main.py  other.py
src/app/: __init__.py
src/app/common/: __init__.py  get_env_vars.py  print_vars.py
src/app/setup/: __init__.py  print_config.py
tests/: test_basic_app.py
